# streams

./: .gitignore  CLAUDE.md  PLAN.md  README.md  SPEC.md  config.example.yaml  package-lock.json  package.json  pyproject.toml  streams-brief.md
docs/: ops.md  plan.md
docs/spikes/: README.md  RESULTS.md  s1_notes.py  s2_imessage.py  s3_reminders.py  s4_note_checklist.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  config.rs  lib.rs  main.rs  reminders.rs  storage.rs  tray.rs
src/core/: attentionEngine.ts  capture.ts  days.ts  events.ts  fuzzyDateParser.ts  merge.ts  mirrorSet.ts  review.ts  transitions.ts  waiting.ts
src/models/: area.ts  common.ts  fuzzyDate.ts  logEntry.ts  settings.ts  stream.ts
src/services/: backup.ts  notifications.ts  remindersMirror.ts
src/storage/: repository.ts  useStore.ts
src/streams/: __init__.py  cli.py  config.py  core.py  daemon.py  gitutil.py  (+13 more)
tests/: attentionEngine.test.ts  backup.test.ts  capture.test.ts  events.test.ts  fuzzyDateParser.test.ts  merge.test.ts  mirrorSet.test.ts  models.test.ts  review.test.ts  test_agent_context.py  test_agent_llm.py  test_agent_overseer.py  test_agent_runner.py  test_capture.py  test_cli.py  test_config.py  test_core.py  test_daemon.py  test_index.py  test_markdown.py  test_messages.py  test_notedoc.py  test_notes_bridge.py  test_reconcile.py  test_reminders.py  test_render.py  test_report.py  test_setup.py  test_store.py  test_sync.py  transitions.test.ts  waiting.test.ts
(+28 files in other folders)
