[project]
name = "streams"
version = "0.0.0"
description = "A headless personal operating system for parallel ventures."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
streams = "streams.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streams"]

[dependency-groups]
dev = ["pytest>=8.0"]
# Apple integration deps, only needed to run the spikes (s3) and, later, the
# bridges. Install with: uv sync --group apple
apple = ["pyobjc-framework-EventKit>=10.3; sys_platform == 'darwin'"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
